--- a/case-impact.html
+++ b/case-impact.html
@@ -1,9 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Case Impact — ORVIAN AI TECH PRIVATE LIMITED</title>
-  <meta name="description" content="Operational impact delivered by ORVIAN: real improvements in processing time, accuracy, escalations, and uptime.">
-  <meta charset="utf-8" />
+<!doctype html><html lang='en'><head><title>Case Impact — ORVIAN</title>  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0A1B2E" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,60 +7,30 @@
   <link rel="stylesheet" href="style.css" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.jpg" />
-  <link rel="icon" href="assets/favicon.ico" />
-</head>
-<body>
-  <div class="orbital-bg" aria-hidden="true"></div>
-  
-  <header class="site-header container">
-    <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
-      <span class="brand-mark"></span>
-      <span class="brand-text">ORVIAN <em>AI TECH</em></span>
-    </a>
-    <nav class="nav" aria-label="Primary">
-      <a href="index.html">Home</a>
-      <a href="solutions.html">Solutions</a>
-      <a href="case-impact.html">Case Impact</a>
-      <a class="cta" href="contact.html">Contact</a>
-    </nav>
-    <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
+  <link rel="icon" href="assets/favicon.ico" /></head><body><div class='neural-canvas'></div><div class='grid-canvas'></div>
+  <header class="site-header">
+    <div class="container nav-row">
+      <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
+        <span class="mark"></span>
+        <span class="word">ORVIAN <em>AI TECH</em></span>
+      </a>
+      <nav class="nav" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="solutions.html">Solutions</a>
+        <a href="case-impact.html">Case Impact</a>
+        <a class="cta" href="contact.html">Contact</a>
+        <span class="underline"></span>
+      </nav>
+      <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
+    </div>
   </header>
-
-  <main class="container">
-    <section class="section">
-      <h1 class="section-title">Case Impact</h1>
-      <p class="muted">Representative operational outcomes achieved across enterprise programs. These illustrate performance improvements only.</p>
-      <div class="impact-grid">
-        <div class="impact-card">
-          <div class="impact-metric">57%</div>
-          <div class="impact-note">Processing time reduced</div>
-          <p>Automated decision pathways and data quality enforcement decreased manual handling and rework.</p>
-        </div>
-        <div class="impact-card">
-          <div class="impact-metric">18%</div>
-          <div class="impact-note">Forecast accuracy improved</div>
-          <p>Feature‑rich time‑series pipelines with robust validation and drift monitoring stabilized forecasts.</p>
-        </div>
-        <div class="impact-card">
-          <div class="impact-metric">33%</div>
-          <div class="impact-note">Escalations reduced</div>
-          <p>Policy‑aware automation with clear exception handling reduced cross‑team escalations.</p>
-        </div>
-        <div class="impact-card">
-          <div class="impact-metric">99.9%</div>
-          <div class="impact-note">Automations uptime in production</div>
-          <p>Cloud‑native MLOps with observability and rollback playbooks improved resilience.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-  
+<main class='container'><section class='section'><h1 class='section-title'>Case Impact</h1><p class='muted'>Representative operational outcomes. No financial claims.</p><div class='impact-grid'><div class='impact-card reveal'><div class='impact-metric'>57%</div><div class='impact-note'>Processing time reduced</div><p>Automated decision pathways and data quality enforcement decreased manual handling and rework.</p></div><div class='impact-card reveal'><div class='impact-metric'>18%</div><div class='impact-note'>Forecast accuracy improved</div><p>Feature‑rich time‑series pipelines with robust validation and drift monitoring stabilized forecasts.</p></div><div class='impact-card reveal'><div class='impact-metric'>33%</div><div class='impact-note'>Escalations reduced</div><p>Policy‑aware automation with clear exception handling reduced cross‑team escalations.</p></div><div class='impact-card reveal'><div class='impact-metric'>99.9%</div><div class='impact-note'>Automations uptime in production</div><p>Cloud‑native MLOps with observability and rollback playbooks improved resilience.</p></div></div></section></main>
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand tiny">
-          <span class="brand-mark"></span>
-          <span class="brand-text">ORVIAN <em>AI TECH</em></span>
+          <span class="mark"></span>
+          <span class="word">ORVIAN <em>AI TECH</em></span>
         </div>
         <p class="muted">Engineer Intelligence. Accelerate Outcomes.</p>
       </div>
@@ -92,6 +57,4 @@
     </div>
   </footer>
   <script src="script.js"></script>
-
-</body>
-</html>
+</body></html>
