--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Contact — ORVIAN AI TECH PRIVATE LIMITED</title>
-  <meta name="description" content="Contact ORVIAN AI TECH PRIVATE LIMITED for enterprise-grade AI systems and automation.">
-  <meta charset="utf-8" />
+<!doctype html><html lang='en'><head><title>Contact — ORVIAN</title>  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0A1B2E" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,63 +7,30 @@
   <link rel="stylesheet" href="style.css" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.jpg" />
-  <link rel="icon" href="assets/favicon.ico" />
-</head>
-<body>
-  <div class="orbital-bg" aria-hidden="true"></div>
-  
-  <header class="site-header container">
-    <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
-      <span class="brand-mark"></span>
-      <span class="brand-text">ORVIAN <em>AI TECH</em></span>
-    </a>
-    <nav class="nav" aria-label="Primary">
-      <a href="index.html">Home</a>
-      <a href="solutions.html">Solutions</a>
-      <a href="case-impact.html">Case Impact</a>
-      <a class="cta" href="contact.html">Contact</a>
-    </nav>
-    <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
+  <link rel="icon" href="assets/favicon.ico" /></head><body><div class='neural-canvas'></div><div class='grid-canvas'></div>
+  <header class="site-header">
+    <div class="container nav-row">
+      <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
+        <span class="mark"></span>
+        <span class="word">ORVIAN <em>AI TECH</em></span>
+      </a>
+      <nav class="nav" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="solutions.html">Solutions</a>
+        <a href="case-impact.html">Case Impact</a>
+        <a class="cta" href="contact.html">Contact</a>
+        <span class="underline"></span>
+      </nav>
+      <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
+    </div>
   </header>
-
-  <main class="container">
-    <section class="section">
-      <h1 class="section-title">Contact</h1>
-      <div class="contact-grid">
-        <div class="contact-card">
-          <ul class="plain">
-            <li><strong>Address:</strong> 203, Goodwill Beyond, Kharadi, Pune 411014, India</li>
-            <li><strong>Email:</strong> <a href="mailto:contact@orvian-tech.com">contact@orvian-tech.com</a></li>
-            <li><strong>Phone:</strong> <a href="tel:+918668700573">8668700573</a>, <a href="tel:+919284449373">9284449373</a></li>
-          </ul>
-          <p class="muted small">Note: We do not display additional contacts online. Use the form for new enquiries.</p>
-        </div>
-        <form id="enquiry" class="form-card" action="https://formspree.io/f/your-form-id" method="POST">
-          <label>Full Name
-            <input name="name" required />
-          </label>
-          <label>Email
-            <input type="email" name="email" required />
-          </label>
-          <label>Company
-            <input name="company" />
-          </label>
-          <label>What do you want to achieve?
-            <textarea name="message" rows="6" placeholder="Briefly describe the operational outcome you want."></textarea>
-          </label>
-          <button type="submit" class="btn primary">Submit Enquiry</button>
-          <p id="status" class="status" role="status" aria-live="polite"></p>
-        </form>
-      </div>
-    </section>
-  </main>
-  
+<main class='container'><section class='section'><h1 class='section-title'>Contact</h1><div class='contact-grid'><div class='contact-card reveal'><ul class='plain'><li><strong>Address:</strong> 203, Goodwill Beyond, Kharadi, Pune 411014, India</li><li><strong>Email:</strong> <a href='mailto:contact@orvian-tech.com'>contact@orvian-tech.com</a></li><li><strong>Phone:</strong> <a href='tel:+918668700573'>8668700573</a>, <a href='tel:+919284449373'>9284449373</a></li></ul><p class='muted small'>We display only primary contacts. Use the form for new enquiries.</p></div><form id='enquiry' class='form-card reveal' action='https://formspree.io/f/your-form-id' method='POST'><label>Full Name<input name='name' required /></label><label>Email<input type='email' name='email' required /></label><label>Company<input name='company' /></label><label>What do you want to achieve?<textarea name='message' rows='6' placeholder='Briefly describe the operational outcome you want.'></textarea></label><button type='submit' class='btn primary'>Submit Enquiry</button><p id='status' class='status' role='status' aria-live='polite'></p></form></div></section></main>
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand tiny">
-          <span class="brand-mark"></span>
-          <span class="brand-text">ORVIAN <em>AI TECH</em></span>
+          <span class="mark"></span>
+          <span class="word">ORVIAN <em>AI TECH</em></span>
         </div>
         <p class="muted">Engineer Intelligence. Accelerate Outcomes.</p>
       </div>
@@ -95,6 +57,4 @@
     </div>
   </footer>
   <script src="script.js"></script>
-
-</body>
-</html>
+</body></html>
