--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!doctype html><html lang='en'><head><title>ORVIAN — Engineer Intelligence</title>  <meta charset="utf-8" />
+<!doctype html>
+<html lang="en">
+<head>
+  <title>ORVIAN AI TECH PRIVATE LIMITED — Engineer Intelligence. Accelerate Outcomes.</title>
+  <meta name="description" content="We build enterprise-grade AI systems and automations that transform business operations.">
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0A1B2E" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -7,7 +12,11 @@
   <link rel="stylesheet" href="style.css" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.jpg" />
-  <link rel="icon" href="assets/favicon.ico" /></head><body><div class='neural-canvas'></div><div class='grid-canvas'></div>
+  <link rel="icon" href="assets/favicon.ico" />
+</head>
+<body>
+  <div class="fx-bg"></div>
+  
   <header class="site-header">
     <div class="container nav-row">
       <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
@@ -24,7 +33,80 @@
       <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
     </div>
   </header>
-<main><section class='hero'><div class='container hero-inner'><div class='hero-copy'><div class='badge'>Enterprise‑Grade AI</div><h1 class='headline reveal'>Engineer Intelligence. <span class='accent'>Accelerate Outcomes.</span></h1><p class='subline reveal'>We build enterprise-grade AI systems and automations that transform business operations.</p><div class='actions reveal'><a class='btn primary' href='contact.html'>Start Your AI Transformation</a><a class='btn ghost' href='solutions.html'>Explore Solutions</a></div><ul class='pillars reveal'><li>AI That Ships</li><li>Secure by Design</li><li>Scale Without Stress</li><li>ROI Measured</li></ul></div><div class='hero-visual reveal'><div class='orb'><span class='ring r1'></span><span class='ring r2'></span><span class='ring r3'></span><span class='glow'></span></div></div></div><div class='ticker'><div class='track'><span>RAG • Model Evaluation • Drift Detection • Human‑in‑the‑Loop • Feature Stores • Canary Deploys • Policy Guardrails</span><span aria-hidden='true'>RAG • Model Evaluation • Drift Detection • Human‑in‑the‑Loop • Feature Stores • Canary Deploys • Policy Guardrails</span></div></div></section><section class='section container'><h2 class='section-title'>Featured Capabilities</h2><div class='grid cards'><article class='card reveal'><div class='icon ai'></div><h3>Foundation & Domain Models</h3><p>Fine‑tuned and retrieval‑augmented models optimized for your domain, governed through rigorous evaluation and guardrails.</p></article><article class='card reveal'><div class='icon flow'></div><h3>Decision Automation</h3><p>Human‑in‑the‑loop workflows that automate routine decisions while enforcing policy, audit trails, and exception handling.</p></article><article class='card reveal'><div class='icon chart'></div><h3>Predictive Intelligence</h3><p>Time‑series, anomaly detection, and forecasting pipelines designed for reliability and operational clarity.</p></article><article class='card reveal'><div class='icon cloud'></div><h3>Cloud‑Native MLOps</h3><p>Lifecycle orchestration, feature stores, CI/CD for models — instrumented for drift detection and safe rollbacks.</p></article></div></section><section class='metrics section'><div class='container'><h2 class='section-title'>Result Highlights</h2><div class='metric-grid'><div class='metric tile reveal'><span class='big'>57%</span><span>Processing time reduced</span></div><div class='metric tile reveal'><span class='big'>18%</span><span>Forecast accuracy improved</span></div><div class='metric tile reveal'><span class='big'>33%</span><span>Escalations reduced</span></div><div class='metric tile reveal'><span class='big'>99.9%</span><span>Automations uptime in production</span></div></div></div></section><section class='cta-band'><div class='container cta-inner'><h3>Start Your AI Transformation</h3><p>Operational, measurable, secure. That’s the standard.</p><a class='btn primary' href='contact.html'>Talk to ORVIAN</a></div></section></main>
+
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-copy">
+          <h1 class="headline">Engineer Intelligence.<br><span class="accent">Accelerate Outcomes.</span></h1>
+          <p class="subline">We build enterprise-grade AI systems and automations that transform business operations.</p>
+          <div class="actions">
+            <a class="btn primary" href="contact.html">Start Your AI Transformation</a>
+            <a class="btn ghost" href="solutions.html">Explore Solutions</a>
+          </div>
+          <ul class="pillars">
+            <li>AI That Ships</li>
+            <li>Secure by Design</li>
+            <li>Scale Without Stress</li>
+            <li>ROI Measured</li>
+          </ul>
+        </div>
+        <div class="hero-diagram" aria-hidden="true">
+          <div class="node n1"></div>
+          <div class="node n2"></div>
+          <div class="node n3"></div>
+          <div class="node n4"></div>
+          <svg class="lines" viewBox="0 0 600 400" preserveAspectRatio="none">
+            <path d="M40,320 C140,280 220,180 320,160 S540,180 560,60" />
+            <path d="M60,260 C160,240 240,160 340,140 S560,160 560,300" />
+          </svg>
+        </div>
+      </div>
+    </section>
+
+    <section class="section container">
+      <h2 class="section-title">Featured Capabilities</h2>
+      <div class="grid cards">
+        <article class="card">
+          <h3>Foundation & Domain Models</h3>
+          <p>Fine‑tuned and retrieval‑augmented models with rigorous evaluation and guardrails. Built to operate in real constraints.</p>
+        </article>
+        <article class="card">
+          <h3>Decision Automation</h3>
+          <p>Human‑in‑the‑loop orchestration with policy checks, audit evidence, and exception handling. Decisions you can trust.</p>
+        </article>
+        <article class="card">
+          <h3>Predictive Intelligence</h3>
+          <p>Time‑series, anomaly detection, and forecasting pipelines that stay stable under drift and changing signals.</p>
+        </article>
+        <article class="card">
+          <h3>Cloud‑Native MLOps</h3>
+          <p>Model lifecycle, feature stores, and CI/CD for data and models — with drift detection and safe rollbacks.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="metrics section">
+      <div class="container">
+        <h2 class="section-title">Result Highlights</h2>
+        <div class="metric-grid">
+          <div class="metric tile"><span class="big">57%</span><span>Processing time reduced</span></div>
+          <div class="metric tile"><span class="big">18%</span><span>Forecast accuracy improved</span></div>
+          <div class="metric tile"><span class="big">33%</span><span>Escalations reduced</span></div>
+          <div class="metric tile"><span class="big">99.9%</span><span>Automations uptime in production</span></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta-band">
+      <div class="container cta-inner">
+        <h3>Start Your AI Transformation</h3>
+        <p>Operational, measurable, secure. That’s the standard.</p>
+        <a class="btn primary" href="contact.html">Talk to ORVIAN</a>
+      </div>
+    </section>
+  </main>
+  
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
@@ -57,4 +139,6 @@
     </div>
   </footer>
   <script src="script.js"></script>
-</body></html>
+
+</body>
+</html>
