--- a/solutions.html
+++ b/solutions.html
@@ -1,4 +1,9 @@
-<!doctype html><html lang='en'><head><title>Solutions — ORVIAN</title>  <meta charset="utf-8" />
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Solutions — ORVIAN AI TECH PRIVATE LIMITED</title>
+  <meta name="description" content="AI Engineering, Decision Intelligence, Predictive Analytics, Cloud-Native MLOps, Strategic AI Advisory.">
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0A1B2E" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -7,7 +12,11 @@
   <link rel="stylesheet" href="style.css" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.jpg" />
-  <link rel="icon" href="assets/favicon.ico" /></head><body><div class='neural-canvas'></div><div class='grid-canvas'></div>
+  <link rel="icon" href="assets/favicon.ico" />
+</head>
+<body>
+  <div class="fx-bg"></div>
+  
   <header class="site-header">
     <div class="container nav-row">
       <a class="brand" href="index.html" aria-label="ORVIAN AI TECH PRIVATE LIMITED">
@@ -24,7 +33,58 @@
       <button id="menu" class="menu" aria-label="Toggle menu">☰</button>
     </div>
   </header>
-<main class='container'><section class='section'><h1 class='section-title'>Solutions</h1><article class='service reveal'><h2>AI Engineering & ML Models</h2><div class='service-grid'><div><h3>Problem</h3><p>Generic AI struggles in enterprise due to fragmented data, unclear evaluation, and governance gaps.</p></div><div><h3>Our Approach</h3><p>Data contracts, feature stores, and retrieval‑augmented architectures. Fine‑tuning/distillation where it moves the needle. Safety evaluation before production.</p></div><div><h3>Outcomes</h3><p>Production‑ready models aligned to constraints; lower inference costs; measurable quality with continuous evaluation.</p></div></div></article><article class='service reveal'><h2>Decision Intelligence & AI Automation</h2><div class='service-grid'><div><h3>Problem</h3><p>Manual decision loops slow operations and create inconsistencies across regions and shifts.</p></div><div><h3>Our Approach</h3><p>Human‑in‑the‑loop orchestration, deterministic policy checks, fallback paths, and full observability with reason codes.</p></div><div><h3>Outcomes</h3><p>Shorter cycle times, fewer escalations, and consistent decisions with audit‑ready evidence.</p></div></div></article><article class='service reveal'><h2>Predictive Analytics & Data Intelligence</h2><div class='service-grid'><div><h3>Problem</h3><p>Forecasts drift and dashboards get noisy when data quality and context aren’t enforced.</p></div><div><h3>Our Approach</h3><p>Data quality SLAs, feature engineering, ensembles for time‑series/anomaly detection; interpretable outputs for operators.</p></div><div><h3>Outcomes</h3><p>Improved forecast accuracy, early anomaly detection, and decisions grounded in dependable signals.</p></div></div></article><article class='service reveal'><h2>Cloud‑Native AI + MLOps Enablement</h2><div class='service-grid'><div><h3>Problem</h3><p>Models remain stuck in notebooks without reliable deployment, versioning, or rollback.</p></div><div><h3>Our Approach</h3><p>Containerized deployments, IaC, feature stores, CI/CD for data and models; drift detection, canary releases, automated rollback.</p></div><div><h3>Outcomes</h3><p>Faster releases, higher stability, and repeatable operations across environments.</p></div></div></article><article class='service reveal'><h2>Strategic AI Advisory for Enterprise Transformation</h2><div class='service-grid'><div><h3>Problem</h3><p>AI initiatives are scattered with unclear prioritization and no operating model for scale.</p></div><div><h3>Our Approach</h3><p>Strategy → roadmap → operating model; portfolio definition, risk management, success metrics; enablement for teams and stakeholders.</p></div><div><h3>Outcomes</h3><p>Aligned investments, clear accountability, and a durable AI operating model.</p></div></div></article></section></main>
+
+  <main class="container">
+    <section class="section">
+      <h1 class="section-title">Solutions</h1>
+
+      <article class="service">
+        <h2>AI Engineering & ML Models</h2>
+        <div class="service-grid">
+          <div><h3>Problem</h3><p>Generic AI fails in enterprise because data is fragmented, evaluation is fuzzy, and governance is missing.</p></div>
+          <div><h3>Our Approach</h3><p>Data contracts and feature stores; RAG with domain context; fine‑tuning/distillation only where ROI justifies; safety evaluation before prod.</p></div>
+          <div><h3>Outcomes</h3><p>Production‑ready models aligned to constraints, measurable quality, and lower inference cost at scale.</p></div>
+        </div>
+      </article>
+
+      <article class="service">
+        <h2>Decision Intelligence & AI Automation</h2>
+        <div class="service-grid">
+          <div><h3>Problem</h3><p>Manual decision loops slow work and create inconsistent judgments across teams.</p></div>
+          <div><h3>Our Approach</h3><p>Human‑in‑the‑loop orchestration with deterministic policy checks and clear rollback; full observability with reason codes.</p></div>
+          <div><h3>Outcomes</h3><p>Cycle times down, fewer escalations, and auditable consistency.</p></div>
+        </div>
+      </article>
+
+      <article class="service">
+        <h2>Predictive Analytics & Data Intelligence</h2>
+        <div class="service-grid">
+          <div><h3>Problem</h3><p>Forecasts drift when data quality and context aren’t enforced.</p></div>
+          <div><h3>Our Approach</h3><p>Data quality SLAs, robust features, and ensembles for time‑series and anomaly detection; interpretable outputs for operators.</p></div>
+          <div><h3>Outcomes</h3><p>Higher signal fidelity, earlier anomalies, better decisions.</p></div>
+        </div>
+      </article>
+
+      <article class="service">
+        <h2>Cloud‑Native AI + MLOps Enablement</h2>
+        <div class="service-grid">
+          <div><h3>Problem</h3><p>Models stall in notebooks without reliable deployment, versioning, or rollback.</p></div>
+          <div><h3>Our Approach</h3><p>Containerized deploys, IaC, feature stores, and CI/CD for models and data; drift detection and canary releases.</p></div>
+          <div><h3>Outcomes</h3><p>Faster releases, higher stability, repeatable operations.</p></div>
+        </div>
+      </article>
+
+      <article class="service">
+        <h2>Strategic AI Advisory for Enterprise Transformation</h2>
+        <div class="service-grid">
+          <div><h3>Problem</h3><p>Scattered initiatives without prioritization or an operating model for scale.</p></div>
+          <div><h3>Our Approach</h3><p>Strategy → roadmap → operating model; risk management, portfolio control, measurable success criteria.</p></div>
+          <div><h3>Outcomes</h3><p>Aligned investment, accountability, durable operating model.</p></div>
+        </div>
+      </article>
+    </section>
+  </main>
+  
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
@@ -57,4 +117,6 @@
     </div>
   </footer>
   <script src="script.js"></script>
-</body></html>
+
+</body>
+</html>
