--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
   <meta property="og:image" content="assets/og.jpg" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
-<body>
-  <div class="fx-bg"></div>
+<body class="v3p1">
+  <div class="fx-bg" style="--bg-url: url('assets/grid.svg');"></div>
   
   <header class="site-header">
     <div class="container nav-row">
@@ -46,7 +46,10 @@
           </ul>
           <p class="muted small">We display only primary contacts. Use the form for new enquiries.</p>
         </div>
-        <form id="enquiry" class="form-card" action="https://formspree.io/f/your-form-id" method="POST">
+        <!-- Formspree-ready form: replace ACTION with your endpoint -->
+        <form id="enquiry" class="form-card" action="https://formspree.io/f/REPLACE_ME" method="POST">
+          <input type="hidden" name="_subject" value="ORVIAN Website Enquiry" />
+          <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off"/>
           <label>Full Name
             <input name="name" required />
           </label>
