--- a/solutions.html
+++ b/solutions.html
@@ -14,8 +14,8 @@
   <meta property="og:image" content="assets/og.jpg" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
-<body>
-  <div class="fx-bg"></div>
+<body class="v3p1">
+  <div class="fx-bg" style="--bg-url: url('assets/grid.svg');"></div>
   
   <header class="site-header">
     <div class="container nav-row">
